--- a/CloudGateway/src/main/resources/application.yml
+++ b/CloudGateway/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
             - name: CircuitBreaker
               args:
                 name: ORDER-SERVICE
-                fallbackuri: forward:/orderServiceFallBack
+                fallback: forward:/orderServiceFallBack
             - name: RequestRateLimiter
               args:
                 redis-rate-limiter.replenishRate: 1
@@ -31,7 +31,7 @@ spring:
             - name: CircuitBreaker
               args:
                 name: PRODUCT-SERVICE
-                fallbackuri: forward:/productServiceFallBack
+                fallback: forward:/productServiceFallBack
             - name: RequestRateLimiter
               args:
                 redis-rate-limiter.replenishRate: 1
@@ -45,8 +45,16 @@ spring:
             - name: CircuitBreaker
               args:
                 name: PAYMENT-SERVICE
-                fallbackuri: forward:/paymentServiceFallBack
+                fallback: forward:/paymentServiceFallBack
             - name: RequestRateLimiter
               args:
                 redis-rate-limiter.replenishRate: 1
                 redis-rate-limiter.burstCapacity: 1
+okta:
+  oauth2:
+    issuer: https://dev-65528860.okta.com/oauth2/default
+    audience: api://default
+    client-id: 0oa9zp6rszLIN5TZ15d7
+    client-secret: 3CKsilAvqgbZSQYIDAvfbt0txVqim0y5bYMLJJLD
+    scopes: openid, profile, email, offline-access
+    redirect-uri: http://localhost:9090/login/oauth2/code/okta
